<resources>
    <string name="app_name">FreeCoach</string>

    <!-- Home page-->
    <string name="home_team_name">" "MAGNY-VERNOIS" "</string>
    <string name="home_yearsSeason">2023-2024</string>
    <string name="home_group">Groupe</string>
    <string name="home_nb_players">Nombre de joueurs licenciés:</string>
    <string name="home_nb_teams">Nombre d\'équipes:</string>

    <!-- Edit Home Page-->
    <string name="edit_home_page">Edition page d\'Accueil</string>
    <string name="input_team_name">Nom de l\'équipe</string>
    <string name="edit_years_season">20--/20--</string>
    <string name="edit_home_match_duration">Durée en mn</string>
    <string name="edit_nb_players">Nb de joueurs</string>
    <string name="edit_group">-Groupe-</string>
    <string name="edit_nb_teams">Nb d\'équipes</string>
    <string name="input_team_group">Equipe à ajouter</string>
    <string name="edit_valid_button">VALIDER</string>
    <string name="edit_clear_list_button">Vider Liste</string>

    <!-- Player item, Player popups Add & Details, Edit Player Page-->
    <string name="player_last_name">NOM</string>
    <string name="player_firstName">Prénom</string>
    <string name="playTime_item">Temps de jeu:</string>
    <string name="record_juggles_item">Record Jongles:</string>

    <string name="players_page_title">" "JOUEURS" "</string>
    <string name="sort_by">Trier par</string>
    <string name="add_player_title">" "Ajout Joueur" "</string>

    <string name="infos_player_title">INFOS JOUEUR</string>
    <string name="popup_strong">Max Pied Fort</string>
    <string name="popup_weak">Max Pied Faible</string>
    <string name="popup_head">Max Tête</string>
    <string name="popup_total">Meilleur Total</string>
    <string name="nb_matchs_played">Nb Matchs joués:</string>
    <string name="popup_playtime">Tps jeu total:</string>
    <string name="playtime_by_match">Tps jeu/match:</string>
    <string name="goals_scored">Buts marqués:</string>

    <string name="edit_player_title">Modifier Infos Joueur</string>
    <string name="edit_new_session_title">Nouvelle scéance de jongles</string>
    <string name="edit_session_strong_label">Pied Fort</string>
    <string name="edit_session_weak_label">Pied Faible</string>
    <string name="edit_session_head_label">Tête</string>
    <string name="edit_session_total_label">Total scéance</string>
    <string name="edit_addPlaytime_label">Ajouter tps de jeu</string>
    <string name="edit_addGoals_label">Buts à ajouter</string>

    <!-- Match item, Matchs page, Add match page -->
    <string name="home_team">EQUIPE DOM</string>
    <string name="outside_team">EQUIPE EXT</string>
    <string name="score">score</string>
    <string name="challenge">Défi</string>
    <string name="result">résultat</string>

    <string name="infos_match">INFOS MATCH</string>
    <string name="match_result">Match Résultat</string>
    <string name="match_homeTeam">Equipe Domicile</string>
    <string name="match_outsideTeam">Equipe Visiteuse</string>

    <string name="create_match_title">Créer fiche Match</string>
    <string name="create_match_challengeResult">Résutat Défi:</string>
    <string name="create_match_win">Gagné</string>
    <string name="create_match_equality">Egalité</string>
    <string name="create_match_lose">Perdu</string>
    <string name="create_match_report_title">Notes de Match</string>


    <!--liste pour le spinner de tri-->
    <string-array name="players_spinner_input">
        <item>NOM</item>
        <item>- de Tps de jeu</item>
        <item>+ de Tps de jeu</item>
        <item>- de Jongles</item>
        <item>+ de Jongles</item>

    </string-array>

</resources>