<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="210dp"
    android:padding="20dp"
    android:background="@drawable/blue_border">

    <TextView
        android:id="@+id/popup_AddPlayer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_player_title"
        android:textColor="@color/white"
        style="@style/DefaultTitleTextStyleBold"
        android:background="@drawable/blue_border"
        android:backgroundTint="@color/blue"/>

    <ImageView
        android:id="@+id/popup_addPlayer_closeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/close_button"
        android:layout_alignParentRight="true"
        app:tint="@color/blue" />

    <EditText
        android:id="@+id/popup_addPlayer_lastName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/popup_AddPlayer_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/player_last_name"
        android:textSize="32dp"
        android:textAlignment="center"
        style="@style/DefaultSubTitleTextStyleBold"
        android:background="@drawable/blue_border"
        android:inputType="textCapCharacters"/>

    <EditText
        android:id="@+id/popup_addPlayer_firstName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/popup_addPlayer_lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/player_firstName"
        android:textSize="32dp"
        android:textAlignment="center"
        style="@style/DefaultSubTitleTextStyleBold"
        android:background="@drawable/blue_border"
        android:inputType="text"
        />

</RelativeLayout>