<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/red_border">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/player_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_last_name"
                style="@style/DefaultTextStyleBold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/player_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_firstName"
                style="@style/DefaultTextStyleBold"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/player_lastname"
                android:paddingLeft="20dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/best_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_juggles_item"/>

            <TextView
                android:id="@+id/best_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                style="@style/DefaultTextStyleBold"
                android:layout_toRightOf="@id/best_score_label"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/playtime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playTime_item"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/best_score"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/playtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                style="@style/DefaultTextStyleBold"
                android:layout_toRightOf="@id/playtime_label"
                android:paddingLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mn"
                android:layout_toRightOf="@id/playtime"
                android:paddingLeft="5dp"/>


        </RelativeLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>