<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPlayerActivity"
    android:padding="10dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/blue_border">

    <TextView
        android:id="@+id/edit_player_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_player_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        style="@style/DefaultTitleTextStyleBold"
        android:background="@drawable/red_border"
        android:backgroundTint="@color/blue"/>

    <LinearLayout
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/edit_player_title"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edit_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="32dp"
            android:inputType="textCapCharacters"
            android:imeOptions="actionDone"
            android:hint="@string/player_last_name"
            android:background="@drawable/blue_border"
            style="@style/DefaultSubTitleTextStyleBold" />

        <EditText
            android:id="@+id/edit_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:textSize="32dp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/player_firstName"
            android:background="@drawable/blue_border"
            style="@style/DefaultSubTitleTextStyleBold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/new_juggles_session"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/edit_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_border">

        <TextView
            android:id="@+id/new_session"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/edit_new_session_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/blue_border"
            android:backgroundTint="@color/blue"
            style="@style/DefaultSubTitleTextStyleBold"/>

        <LinearLayout
            android:id="@+id/edit_strong"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/new_session"
            android:layout_marginTop="22dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/DefaultSubTitleTextStyleBold"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/edit_session_strong_label" />

            <EditText
                android:id="@+id/edit_new_strong"
                style="@style/DefaultSubTitleTextStyleBold"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/blue_border"
                android:inputType="number"
                android:text="0"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/edit_image_strong"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_weak"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edit_strong"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_session_weak_label"
                android:layout_marginLeft="50dp"
                style="@style/DefaultSubTitleTextStyleBold"/>
            <EditText
                android:id="@+id/edit_new_weak"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:inputType="number"
                android:layout_marginLeft="30dp"
                style="@style/DefaultSubTitleTextStyleBold"
                android:background="@drawable/blue_border"/>

            <ImageView
                android:id="@+id/edit_image_weak"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_head"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edit_weak"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_session_head_label"
                android:layout_marginLeft="50dp"
                style="@style/DefaultSubTitleTextStyleBold"/>
            <EditText
                android:id="@+id/edit_new_head"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:layout_marginLeft="30dp"
                style="@style/DefaultSubTitleTextStyleBold"
                android:background="@drawable/blue_border"/>

            <ImageView
                android:id="@+id/edit_image_head"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_total"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edit_head"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_session_total_label"
                android:layout_marginLeft="50dp"
                style="@style/DefaultSubTitleTextStyleBold"/>
            <TextView
                android:id="@+id/edit_new_total"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:inputType="number"
                android:layout_marginLeft="20dp"
                style="@style/DefaultSubTitleTextStyleBold"
                android:background="@drawable/blue_border"/>

            <ImageView
                android:id="@+id/edit_image_total"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/edit_playtime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/new_juggles_session"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DefaultSubTitleTextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/edit_addPlaytime_label" />

        <EditText
            android:id="@+id/edit_add_playtime"
            style="@style/DefaultSubTitleTextStyleBold"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="0"
            android:textAlignment="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:background="@drawable/blue_border"/>

        <TextView
            style="@style/DefaultSubTitleTextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="mn" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/edit_goals"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/edit_playtime"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_addGoals_label"
            style="@style/DefaultSubTitleTextStyleBold"/>

        <EditText
            android:id="@+id/edit_add_goals"
            style="@style/DefaultSubTitleTextStyleBold"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="0"
            android:textAlignment="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:background="@drawable/blue_border"/>

    </LinearLayout>

    <Button
        android:id="@+id/editPlayerValidButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/edit_valid_button"
        android:textSize="24dp" />

    <ImageView
        android:id="@+id/editPlayerExitButton"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:src="@drawable/close_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/blue_border"
        android:backgroundTint="@color/blue"
        app:tint="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>

</RelativeLayout>